--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -74,6 +74,25 @@
                                         <rect key="frame" x="355" y="70" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0av-ih-NI4">
+                                        <rect key="frame" x="0.0" y="0.0" width="415" height="180"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Введите название города" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZkA-On-MQK">
+                                                <rect key="frame" x="89" y="101" width="237" height="24"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QBc-wy-olD">
+                                                <rect key="frame" x="182" y="42" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -137,6 +156,16 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oxs-CH-3R2">
+                                <rect key="frame" x="293" y="319" width="103" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title=" Добавить" image="plus" catalog="system">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="addCityInFavourAction:" destination="LT5-Gj-0U1" eventType="touchUpInside" id="YVt-6C-3L3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PPQ-LS-6Iv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -149,32 +178,20 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addCityButton" destination="0O3-Sz-HKG" id="mfY-83-ZAa"/>
+                        <outlet property="addCityInFavourList" destination="Oxs-CH-3R2" id="8DF-mP-nfp"/>
                         <outlet property="currentCity" destination="R5K-0M-ME8" id="vfA-KW-qRi"/>
                         <outlet property="currentCityIcon" destination="jJX-fY-17B" id="MMJ-bx-zHw"/>
                         <outlet property="currentCityTemp" destination="G8R-ng-rba" id="htL-VX-8vq"/>
                         <outlet property="currentRegion" destination="eG2-1I-5uS" id="CQo-eJ-zCJ"/>
                         <outlet property="tableView" destination="o3G-Ex-IUu" id="dlS-9z-ciS"/>
                         <outlet property="textField" destination="QG6-sV-DXh" id="ZzS-8C-1ny"/>
+                        <outlet property="viewHidden" destination="0av-ih-NI4" id="P2D-yu-PYv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zgv-WD-83w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="34.782608695652179" y="-198.21428571428569"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="PuL-Ve-1g0">
-            <objects>
-                <viewController id="1Q8-k4-jgi" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AnJ-HR-9qc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="uGt-M6-av1"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="POz-bk-rCr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="783" y="-198"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xDr-8E-wCh">
@@ -196,6 +213,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.up" catalog="system" width="120" height="128"/>
         <image name="day" width="660" height="440"/>
         <image name="evening" width="1200" height="675"/>
         <image name="iconDefault" width="64" height="64"/>
